--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -83,13 +83,13 @@ section#home {
     background-color: black;
 }
 
-section#about {
+section#conferences {
   /* background: url("https://images.pexels.com/photos/695644/pexels-photo-695644.jpeg?cs=srgb&dl=lighted-candle-695644.jpg&fm=jpg")
     no-repeat center center/cover; */
     background-color: white;
 }
 
-section#projects {  
+section#features {  
     /* background: url("https://images.pexels.com/photos/695644/pexels-photo-695644.jpeg?cs=srgb&dl=lighted-candle-695644.jpg&fm=jpg")
     no-repeat center center/cover; */
     background-color: pink;
